[package]
name = "p3-examples"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
p3-air.workspace = true
p3-blake3-air.workspace = true
p3-challenger.workspace = true
p3-circle.workspace = true
p3-commit.workspace = true
p3-dft.workspace = true
p3-field.workspace = true
p3-fri.workspace = true
p3-keccak.workspace = true
p3-keccak-air.workspace = true
p3-matrix.workspace = true
p3-merkle-tree.workspace = true
p3-mersenne-31.workspace = true
p3-monty-31.workspace = true
p3-poseidon2.workspace = true
p3-poseidon2-air.workspace = true
p3-symmetric.workspace = true
p3-uni-stark.workspace = true

bincode = { workspace = true, features = ["serde", "alloc"] }
clap.workspace = true
rand.workspace = true

[dev-dependencies]
p3-baby-bear.workspace = true
p3-challenger.workspace = true
p3-commit = { workspace = true, features = ["test-utils"] }
p3-dft.workspace = true
p3-koala-bear.workspace = true
p3-matrix.workspace = true

tracing-forest = { workspace = true, features = ["ansi", "smallvec"] }
tracing-subscriber = { workspace = true, features = ["std", "env-filter"] }

[features]
nightly-features = [
    "p3-monty-31/nightly-features",
    "p3-baby-bear/nightly-features",
    "p3-koala-bear/nightly-features",
    "p3-mersenne-31/nightly-features",
]
