[package]
name = "p3-field-testing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-dft.workspace = true
p3-field.workspace = true
p3-matrix.workspace = true
p3-util.workspace = true

criterion.workspace = true
num-bigint.workspace = true
rand.workspace = true

