[package]
name = "p3-field-testing"
description = "Testing utilities for finite field arithmetic and field-based operations in the Plonky3 ecosystem."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-field = { path = "../field" }
rand = { version = "0.8.5", features = ["min_const_gen"] }
criterion = "0.5.1"

[dev-dependencies]
p3-baby-bear = { path = "../baby-bear" }