[package]
name = "p3-field"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
p3-util.workspace = true

p3-maybe-rayon.workspace = true

itertools.workspace = true
num-bigint.workspace = true
paste.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true

[dev-dependencies]
p3-baby-bear.workspace = true
p3-goldilocks.workspace = true

[features]
parallel = ["p3-maybe-rayon/parallel"]
