[package]
name = "p3-field"
description = "A modular framework for finite fields, including support for generic binomial extensions, SIMD-packed field arithmetic."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-maybe-rayon.workspace = true
p3-util.workspace = true

itertools.workspace = true
num-bigint.workspace = true
paste.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true

[dev-dependencies]
p3-baby-bear.workspace = true
p3-goldilocks.workspace = true
