[package]
name = "p3-field"
description = "A modular framework for finite fields, including support for generic binomial extensions, SIMD-packed field arithmetic."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-util = { workspace = true }
num-bigint = { version = "0.4.3", default-features = false }
num-traits = { version = "0.2.18", default_features = false }

itertools = "0.12.0"
rand = "0.8.5"
serde = { version = "1.0", default-features = false, features = ["derive"] }
