[package]
name = "p3-fri-testing"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Plonky3 tests for the FRI protocol."

[dev-dependencies]
p3-baby-bear = "0.2.0"
p3-challenger = "0.2.0"
p3-circle = "0.2.0"
p3-commit = "0.2.0"
p3-dft = "0.2.0"
p3-field = "0.2.0"
p3-fri = "0.2.0"
p3-goldilocks = "0.2.0"
p3-keccak = "0.2.0"
p3-matrix = "0.2.0"
p3-mds = "0.2.0"
p3-mersenne-31 = "0.2.0"
p3-merkle-tree = "0.2.0"
p3-poseidon2 = "0.2.0"
p3-symmetric = "0.2.0"
p3-util = "0.2.0"
itertools = "0.13.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
