[package]
name = "p3-fri"
description = "An implementation of the FRI low-degree test (LDT) protocol used in zero-knowledge proof systems."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-challenger.workspace = true
p3-commit.workspace = true
p3-dft.workspace = true
p3-field.workspace = true
p3-interpolation.workspace = true
p3-matrix.workspace = true
p3-maybe-rayon.workspace = true
p3-util.workspace = true

itertools.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive", "alloc"] }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
p3-baby-bear = { path = "../baby-bear" }
p3-circle = { path = "../circle" }
p3-dft = { path = "../dft" }
p3-goldilocks = { path = "../goldilocks" }
p3-keccak = { path = "../keccak" }
p3-merkle-tree = { path = "../merkle-tree" }
p3-mersenne-31 = { path = "../mersenne-31" }
p3-symmetric = { path = "../symmetric" }

criterion.workspace = true

[[bench]]
name = "fold_even_odd"
harness = false

[lints]
workspace = true
