[package]
name = "p3-goldilocks"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
p3-dft.workspace = true
p3-field.workspace = true
p3-mds.workspace = true
p3-poseidon2.workspace = true
p3-symmetric.workspace = true
p3-util.workspace = true

num-bigint.workspace = true
paste.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
p3-field-testing.workspace = true
p3-poseidon.workspace = true

criterion.workspace = true
rand.workspace = true

[features]
nightly-features = []

[[bench]]
name = "bench_field"
harness = false

[[bench]]
name = "extension"
harness = false
