[package]
name = "p3-goldilocks"
description = "An implementation of the Goldilocks prime field F_p, where p = 2^64 - 2^32 + 1."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-dft.workspace = true
p3-field.workspace = true
p3-mds.workspace = true
p3-poseidon2.workspace = true
p3-symmetric.workspace = true
p3-util.workspace = true

num-bigint.workspace = true
paste.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
p3-field-testing.workspace = true
p3-poseidon.workspace = true

criterion.workspace = true
rand.workspace = true

[features]
nightly-features = []

[[bench]]
name = "bench_field"
harness = false

[[bench]]
name = "extension"
harness = false
