[package]
name = "p3-interpolation"
version = "0.1.5-succinct"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
p3-field = { path = "../field", version = "0.1.5-succinct" }
p3-matrix = { path = "../matrix", version = "0.1.5-succinct" }
p3-util = { path = "../util", version = "0.1.5-succinct" }

[dev-dependencies]
p3-baby-bear = { path = "../baby-bear" }
