[package]
name = "p3-interpolation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
p3-field.workspace = true
p3-matrix.workspace = true
p3-maybe-rayon.workspace = true
p3-util.workspace = true

[dev-dependencies]
p3-baby-bear.workspace = true

[features]
parallel = ["p3-maybe-rayon/parallel"]
