[package]
name = "p3-interpolation"
description = "Tools for performing Lagrange interpolation over two-adic subgroups and their cosets."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-field.workspace = true
p3-matrix.workspace = true
p3-maybe-rayon.workspace = true
p3-util.workspace = true

[dev-dependencies]
p3-baby-bear.workspace = true
