[package]
name = "p3-keccak-air"
description = "An AIR for the Keccak-f permutation, assuming a field size between 2^16 and 2^32."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-air = { path = "../air" }
p3-field = { path = "../field" }
p3-matrix = { path = "../matrix" }
p3-maybe-rayon = { path = "../maybe-rayon" }
p3-util = { path = "../util" }
tracing = "0.1.37"

[dev-dependencies]
p3-baby-bear = { path = "../baby-bear" }
p3-challenger = { path = "../challenger" }
p3-circle = { path = "../circle" }
p3-commit = { path = "../commit" }
p3-dft = { path = "../dft" }
p3-fri = { path = "../fri" }
p3-goldilocks = { path = "../goldilocks" }
p3-keccak = { path = "../keccak" }
p3-mds = { path = "../mds" }
p3-merkle-tree = { path = "../merkle-tree" }
p3-mersenne-31 = { path = "../mersenne-31" }
p3-poseidon = {path = "../poseidon"}
p3-poseidon2 = { path = "../poseidon2" }
p3-symmetric = { path = "../symmetric" }
p3-uni-stark = { path = "../uni-stark" }
rand = "0.8.5"
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }

[features]
# TODO: Consider removing, at least when this gets split off into another repository.
# We should be able to enable p3-maybe-rayon/parallel directly; this just doesn't
# seem to work when using cargo with the -p or --package option.
parallel = ["p3-maybe-rayon/parallel"]
