[package]
name = "p3-keccak"
description = "An optimized implementation of the Keccak-f permutation and Keccak256 hash function."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-symmetric = { workspace = true }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
